# reddit-connectivity

./: .gitignore  .pdm-python  Dockerfile  Makefile  README.md  doccano_input.jsonl  docker-compose.yml  dvc.yaml  pyproject.toml  temp.py
.dvc/: config
data/processed/: .gitignore  cities.csv  exclude.txt  label.dvc
scripts/analysis/: pci.py  process.py  regressions.py
scripts/app/: gradio_test.py  sl_app.py
scripts/labelling/: label.py  subset.py
scripts/preprocessing/: aggregate.py  combine_comments.py  gazetteer.py  geocode.py  h3_poly.py  reddit_api.py
src/: app.py  ner.py  train.py
src/common/: utils.py
src/pl_data/: jsonl_dataset.py  test_dataset.py  wnut_dataset.py
src/pl_module/: ger_model.py
