[tool.poetry]
name = "reddit-connectivity"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]
readme = "README.md"
packages = [{ include = "reddit_connectivity" }]

[tool.poetry.dependencies]
python = "3.10.10"
pytorch-lightning = "^2.0.0"
datasets = "^2.10.1"
spacy = "^3.5.1"
seqeval = "^1.2.2"
psaw = "^0.1.0"
rtree = "^1.0.1"
scikit-learn = "^1.2.2"
networkx = "^3.0"
seaborn = "^0.12.2"
jsonlines = "^3.1.0"
numba = "^0.56.4"
h3 = "^3.7.6"
h3pandas = "^0.2.4"
nltk = "^3.8.1"
statsmodels = "^0.13.5"
polars = "^0.16.14"
scienceplots = "^2.0.1"
mapclassify = "^2.5.0"
wheel = "^0.40.0"
ipython = "^8.11.0"
pandas-stubs = "^1.5.3.230304"
pytest = "^7.2.2"
ipdb = "^0.13.13"
pyqt5 = "^5.15.9"
tabulate = "^0.9.0"
doccano = "^1.8.3"
dvc = "^2.51.0"
mlflow = "^2.2.2"
dvc-http = { git = "https://github.com/iterative/dvc-http.git" }
ruff = "^0.0.257"
neovim = "^0.3.1"
transformers = "^4.27.1"
torch = "^2.0.0"
jupyter = "^1.0.0"
dvc-s3 = "^2.21.0"
dagshub = "^0.2.12"
gradio = "^3.22.1"
plotly = "^5.13.1"
ruff-lsp = "^0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
