[tool.poetry]
name = "reddit-connectivity"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]
readme = "README.md"
packages = [{ include = "reddit_connectivity" }]


[tool.pdm.build]
includes = ["reddit_connectivity"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "cjber", email = "cjberragan@gmail.com"},
]
requires-python = ">=3.10.10,<3.10.11"
dependencies = [
    "psaw<1.0.0,>=0.1.0",
    "rtree<2.0.0,>=1.0.1",
    "scikit-learn<2.0.0,>=1.2.2",
    "networkx<4.0,>=3.0",
    "seaborn<1.0.0,>=0.12.2",
    "jsonlines<4.0.0,>=3.1.0",
    "numba<1.0.0,>=0.56.4",
    "h3<4.0.0,>=3.7.6",
    "h3pandas<1.0.0,>=0.2.4",
    "nltk<4.0.0,>=3.8.1",
    "statsmodels<1.0.0,>=0.13.5",
    "polars<1.0.0,>=0.16.14",
    "scienceplots<3.0.0,>=2.0.1",
    "mapclassify<3.0.0,>=2.5.0",
    "wheel<1.0.0,>=0.40.0",
    "ipython<9.0.0,>=8.11.0",
    "pandas-stubs<2.0.0.0,>=1.5.3.230304",
    "pytest<8.0.0,>=7.2.2",
    "ipdb<1.0.0,>=0.13.13",
    "pyqt5<6.0.0,>=5.15.9",
    "tabulate<1.0.0,>=0.9.0",
    "doccano>=1.8.3",
    "dvc<3.0.0,>=2.51.0",
    "mlflow<3.0.0,>=2.2.2",
    "dvc-http @ git+https://github.com/iterative/dvc-http.git",
    "ruff<1.0.0,>=0.0.257",
    "neovim<1.0.0,>=0.3.1",
    "transformers<5.0.0,>=4.27.1",
    "torch<3.0.0,>=2.0.0",
    "jupyter<2.0.0,>=1.0.0",
    "dvc-s3<3.0.0,>=2.21.0",
    "dagshub<1.0.0,>=0.2.12",
    "plotly<6.0.0,>=5.13.1",
    "ruff-lsp<1.0.0,>=0.0.23",
    "matplotlib-scalebar<1.0.0,>=0.8.1",
    "pysal>=23.1",
    "streamlit>=1.25.0",
    "rustworkx>=0.13.0",
    "docrepr>=0.2.0",
    "jupyter-cache>=0.6.1",
    "gradio>=3.47.1",
]
name = "reddit-connectivity"
version = "0.1.0"
description = ""
readme = "README.md"
